_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/BI_Stage_Or_Status_History__c.object-meta.xml
<CustomObject>
    <label>Stage/Status History</label>
    <nameField>
        <displayFormat>SSH-{00000}</displayFormat>
        <label>Stage/Status History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage/Status Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>