_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/fields/BI_Duration__c.field-meta.xml
<CustomField>
    <fullName>BI_Duration__c</fullName>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>