_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/fields/BI_Lead__c.field-meta.xml
<CustomField>
    <fullName>BI_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Lead_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>