_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/fields/BI_Lead_Status_To__c.field-meta.xml
<CustomField>
    <fullName>BI_Lead_Status_To__c</fullName>
    <label>Lead Status To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Lead_Status</valueSetName>
    </valueSet>
</CustomField>