_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/fields/BI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stage/Status Histories</relationshipLabel>
    <relationshipName>Opportunties_Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>