_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/fields/BI_Opportunity_Status_From__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunity_Status_From__c</fullName>
    <label>Opportunity Stage From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Opportunity_StageName</valueSetName>
    </valueSet>
</CustomField>