_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/fields/BI_Proposal_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>BI_Proposal_Request_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Request Form</label>
    <referenceTo>BI_Proposal_Request_Form__c</referenceTo>
    <relationshipLabel>Stage/Status Histories</relationshipLabel>
    <relationshipName>Proposal_Request_Form_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>