_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/fields/BI_Proposal_Request_Form_Status_To__c.field-meta.xml
<CustomField>
    <fullName>BI_Proposal_Request_Form_Status_To__c</fullName>
    <label>Proposal Request Form Stage To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>xxBI_Proposal_Request_Form_Status</valueSetName>
    </valueSet>
</CustomField>