_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/fields/BI_Stage_Or_Status_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>BI_Stage_Or_Status_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stage/Status Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pricing_Request_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>