_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/recordTypes/BI_Lead_Status_History.recordType-meta.xml
<RecordType>
    <fullName>BI_Lead_Status_History</fullName>
    <active>true</active>
    <label>Lead Status History</label>
</RecordType>