_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/recordTypes/BI_Opportunity_Stage_History.recordType-meta.xml
<RecordType>
    <fullName>BI_Opportunity_Stage_History</fullName>
    <active>true</active>
    <label>Opportunity Stage History</label>
</RecordType>