_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/recordTypes/BI_Proposal_Request_Form_Stage_History.recordType-meta.xml
<RecordType>
    <fullName>BI_Proposal_Request_Form_Stage_History</fullName>
    <active>true</active>
    <label>Proposal Request Form Stage History</label>
</RecordType>