_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BI_Duration__c</columns>
    <columns>BI_Lead__c</columns>
    <columns>BI_Lead_Status_From__c</columns>
    <columns>BI_Lead_Status_To__c</columns>
    <columns>BI_Opportunity__c</columns>
    <columns>BI_Opportunity_Status_From__c</columns>
    <columns>BI_Opportunity_Status_To__c</columns>
    <columns>BI_Proposal_Request_Form__c</columns>
    <columns>BI_Proposal_Request_Form_Status_From__c</columns>
    <columns>BI_Proposal_Request_Form_Status_To__c</columns>
    <columns>BI_Stage_Or_Status_Changed_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>