_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/listViews/BI_Lead_Status_History_View.listView-meta.xml
<ListView>
    <fullName>BI_Lead_Status_History_View</fullName>
    <columns>NAME</columns>
    <columns>BI_Duration__c</columns>
    <columns>BI_Lead__c</columns>
    <columns>BI_Lead_Status_From__c</columns>
    <columns>BI_Lead_Status_To__c</columns>
    <columns>BI_Stage_Or_Status_Changed_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Lead__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Lead Status History View</label>
</ListView>