_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/listViews/BI_Opportunity_Stage_History_View.listView-meta.xml
<ListView>
    <fullName>BI_Opportunity_Stage_History_View</fullName>
    <columns>NAME</columns>
    <columns>BI_Opportunity__c</columns>
    <columns>BI_Opportunity_Status_From__c</columns>
    <columns>BI_Opportunity_Status_To__c</columns>
    <columns>BI_Duration__c</columns>
    <columns>BI_Stage_Or_Status_Changed_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Opportunity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Opportunity Stage History View</label>
</ListView>