_Source/force-app/main/default/objects/BI_Stage_Or_Status_History__c/listViews/BI_Pricing_Request_History_View.listView-meta.xml
<ListView>
    <fullName>BI_Pricing_Request_History_View</fullName>
    <columns>NAME</columns>
    <columns>BI_Proposal_Request_Form__c</columns>
    <columns>BI_Proposal_Request_Form_Status_From__c</columns>
    <columns>BI_Proposal_Request_Form_Status_To__c</columns>
    <columns>BI_Duration__c</columns>
    <columns>BI_Stage_Or_Status_Changed_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Proposal_Request_Form__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Pricing Request History View</label>
</ListView>